src/test/ui/const-generics/raw-ptr-const-param.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/raw-ptr-const-param.rs:1:12
   |
LL | #![feature(const_generics, const_compare_raw_pointers)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error[E0308]: mismatched types
  --> $DIR/raw-ptr-const-param.rs:7:40
   |
LL |     let _: Const<{ 15 as *const _ }> = Const::<{ 10 as *const _ }>;
   |            -------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `{0xf as *const u32}`, found `{0xa as *const u32}`
   |            |
   |            expected due to this
   |
   = note: expected struct `Const<{0xf as *const u32}>`
              found struct `Const<{0xa as *const u32}>`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
